Thu Oct  7 12:50:38 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tutorials/Quoter/Simple/Broker/StockBroker.mpc:
        * tutorials/Quoter/Simple/Distributor/StockDistributor.mpc:
        * tutorials/Quoter/Simple/Stock_Base/Stock_Base.mpc:
        * ChangeLog:
        * tests/CIF/Navigation/client.cpp:
        * tests/CIF/Receptacle/client.cpp:
        * tests/Bug_2130_Regression/interfaces/ENW.mpc:
        * examples/Hello/Hello_Base/Hello_Base.mpc:
        * examples/BasicSP/BMClosedED/BMClosedED.mpc:
        * examples/BasicSP/BasicSP.mpc:
        * examples/BasicSP/BMDisplay/BMDisplay.mpc:
        * examples/BasicSP/EC/EC.mpc:
        * examples/BasicSP/BMDevice/BMDevice.mpc:
        * examples/Display/Display_Base/Display_Base.mpc:
        * examples/DevGuideExamples/Messenger/Receiver.mpc:
        Add avoids_ccm_noevent tp MPC and if !defined(CCM_NOEVENT) tp cpp files. 

Thu Oct  7 11:39:15 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h:
        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
          Regenerated these files with -Gex and pasted the original
          implementation back into the generated files, the destructors of
          the facets aren't called anymore with the methods as generated
          by tao_idl

Thu Oct  7 11:05:45 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/Connection_Handler.h:
        * ciao/Deployment/Handlers/Connection_Handler.cpp:
          Implemented disconnect for local facets, but found that DAnCE doesn't
          do any disconnect for connections at this moment so this code is never
          called

        * tests/IDL3/Events/Abstract/Abstract.idl:
          Fixed typo

Thu Oct  7 09:10:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h: